Changes from Serverless Logic Web Tools

--- a/static/ods.dash.yaml
+++ b/static/ods.dash.yaml
@@ -23,58 +23,35 @@ datasets:
         type: NUMBER
   - uuid: component_count
     content: >-
-     [
-        ["21/09", 28, 0, 0, 0],
-        ["21/10", 29, 3, 0, 3],
-        ["21/11", 30, 8, 0, 11],
-        ["21/12", 30, 3, 0, 14],
-        ["22/01", 30, 0, 0, 14],
-        ["22/02", 30, 0, 0, 14],
-        ["22/03", 31, 0, 0, 14],
-        ["22/04", 31, 1, 1, 15],
-        ["22/05", 33, 0, 0, 15],
-        ["22/06", 33, 3, 0, 18],
-        ["22/07", 38, 4, 0, 22],
-        ["22/08", 42, 0, 1, 22],
-        ["22/09", 44, 3, 0, 25],
-        ["22/10", 44, 0, 0, 25],
-        ["22/11", 44, 0, 0, 25],
-        ["22/12", 49, 1, 0, 26],
-        ["22/01", 50, 0, 0, 26],
-        ["22/02", 51, 0, 0, 26],
-        ["22/03", 52, 0, 0, 26],
-        ["23/04", 56, 3, 1, 29],
-        ["23/05", 56, 1, 0, 30],
-        ["23/06", 58, 4, 1, 34],
-        ["23/07", 56, 4, 1, 38],
-        ["23/08", 57, 2, 0, 40],
-        ["23/09", 58, 2, 0, 42],
-        ["23/10", 59, 2, 0, 44],
-        ["23/11", 59, 1, 0, 45],
-        ["23/12", 59, 0, 0, 45],
-        ["24/01", 59, 0, 0, 45],
-        ["24/02", 61, 0, 0, 45],
-        ["24/03", 61, 0, 3, 45],
-        ["24/04", 58, 1, 10, 46],
-        ["24/05", 57, 0, 13, 46],
-        ["24/06", 57, 0, 4, 46],
+      [
+        ["21/07", 26, 26, 0, 0, 0, 0, 0], ["21/08", 0, 26, 0, 0, 0, 0, 0], ["21/09", 5, 31, 0, 0, 0, 0, 0], ["21/10", 1, 32, 0, 0, 0, 0, 0], ["21/11", 1, 33, 11, 11, 0.33, 0, 0], ["21/12", 0, 33, 3, 14, 0.42, 0, 0], ["22/01", 0, 33, 0, 14, 0.42, 0, 0], ["22/02", 0, 33, 0, 14, 0.42, 0, 0], ["22/03", 1, 34, 0, 14, 0.41, 0, 0], ["22/04", 0, 34, 0, 14, 0.41, 1, 1], ["22/05", 2, 36, 0, 14, 0.39, 0, 1], ["22/06", 0, 36, 0, 14, 0.39, 0, 1], ["22/07", 5, 41, 9, 23, 0.56, 0, 1], ["22/08", 4, 45, 0, 23, 0.51, 1, 2], ["22/09", 2, 47, 3, 26, 0.55, 0, 2], ["22/10", 0, 47, 0, 26, 0.55, 0, 2], ["22/11", 0, 47, 0, 26, 0.55, 0, 2], ["22/12", 4, 51, 1, 27, 0.53, 0, 2], ["23/01", 1, 52, 0, 27, 0.52, 0, 2], ["23/02", 0, 52, 1, 28, 0.54, 0, 2], ["23/03", 0, 52, 0, 28, 0.54, 0, 2], ["23/04", 3, 55, 0, 28, 0.51, 1, 3], ["23/05", 0, 55, 1, 29, 0.53, 0, 3], ["23/06", 1, 56, 9, 38, 0.68, 1, 4], ["23/07", 0, 56, 4, 42, 0.75, 1, 5], ["23/08", 0, 56, 0, 42, 0.75, 0, 5], ["23/09", 0, 56, 5, 47, 0.84, 0, 5], ["23/10", 1, 57, 1, 48, 0.84, 0, 5], ["23/11", 1, 58, 2, 50, 0.86, 0, 5], ["23/12", 0, 58, 0, 50, 0.86, 0, 5], ["24/01", 3, 61, 0, 50, 0.82, 0, 5], ["24/02", 0, 61, 0, 50, 0.82, 0, 5], ["24/03", 1, 62, 1, 51, 0.82, 3, 8], ["24/04", 0, 62, 0, 51, 0.82, 10, 18], ["24/05", 1, 63, 0, 51, 0.81, 20, 38], ["24/06", 0, 63, 0, 51, 0.81, 7, 45], ["24/07", 0, 63, 0, 51, 0.81, 0, 45]
       ]
     columns:
       - id: Month
         type: LABEL
       - id: Identified components
         type: NUMBER
+      - id: Identified components (cumulated)
+        type: NUMBER
       - id: Components created
+        type: NUMBER
+      - id: Components created (cumulated)
+        type: NUMBER
+      - id: Components completion
         type: NUMBER
       - id: Components updated
         type: NUMBER
-      - id: Sum of distinct components
+      - id: Components updated (cumulated)
+        type: NUMBER
   - uuid: documentation_views
     content: >-
       [
         ["24/03", 36, 1628],
         ["24/04", 78, 2036],
         ["24/05", 61, 2203],
+        ["24/06", 61, 1480],
+        ["24/07", 60, 2038],
+        ["24/08", 24, 249],
       ]
     columns:
       - id: Month
@@ -84,22 +61,7 @@ datasets:
   - uuid: run
     content: >-
       [
-        ["23/03", 1, 0, 0, 1, 0, 2],
-        ["23/04", 0, 0, 0, 0, 0, 0],
-        ["23/05", 0, 0, 1, 1, 0, 2],
-        ["23/06", 0, 1, 1, 1, 0, 3],
-        ["23/07", 0, 1, 3, 0, 0, 4],
-        ["23/08", 1, 0, 2, 1, 0, 4],
-        ["23/09", 2, 0, 2, 1, 0, 5],
-        ["23/10", 5, 1, 1, 0, 1, 8],
-        ["23/11", 21, 3, 3, 2, 1, 30],
-        ["23/12", 7, 5, 2, 1, 1, 16],
-        ["24/01", 10, 4, 6, 4, 1, 25],
-        ["24/02", 3, 0, 1, 1, 0, 5],
-        ["24/03", 3, 2, 0, 1, 0, 6],
-        ["24/04", 3, 2, 0, 3, 0, 8],
-        ["24/05", 3, 0, 0, 2, 0, 5],
-        ["24/06", 0, 0, 0, 0, 0, 0],
+        ["23/03", 1, 0, 0, 1, 0, 2], ["23/04", 0, 0, 0, 0, 0, 0], ["23/05", 0, 0, 2, 1, 0, 3], ["23/06", 0, 1, 1, 1, 0, 3], ["23/07", 0, 1, 3, 0, 0, 4], ["23/08", 1, 0, 2, 1, 0, 4], ["23/09", 2, 0, 2, 1, 0, 5], ["23/10", 5, 1, 1, 0, 1, 8], ["23/11", 21, 3, 3, 2, 1, 30], ["23/12", 7, 5, 2, 1, 1, 16], ["24/01", 10, 4, 6, 4, 1, 25], ["24/02", 3, 0, 1, 1, 0, 5], ["24/03", 5, 2, 0, 3, 0, 10], ["24/04", 3, 0, 0, 3, 0, 6], ["24/05", 4, 0, 0, 4, 1, 10], ["24/06", 0, 0, 0, 0, 0, 0], ["24/07", 0, 0, 0, 0, 0, 0], ["24/08", 0, 0, 0, 0, 0, 0]
       ]
     columns:
       - id: Month
@@ -113,11 +75,11 @@ datasets:
   - uuid: run_types
     content: >-
       [
-        ["ODS issues", 58],
+        ["ODS issues", 62],
         ["ODS features", 17],
-        ["Documentation", 22],
-        ["Troubleshoot", 18],
-        ["Design", 4],
+        ["Documentation", 23],
+        ["Troubleshoot", 23],
+        ["Design", 5],
       ]
     columns:
       - id: Name
@@ -126,39 +88,7 @@ datasets:
   - uuid: run_issues
     content: >-
       [
-        ["21/10", 0, 0, 0],
-        ["21/11", 2, 0, -2],
-        ["21/12", 0, 1, -1],
-        ["22/01", 3, 1, -3],
-        ["22/02", 3, 3, -3],
-        ["22/03", 1, 1, -3],
-        ["22/04", 3, 1, -5],
-        ["22/05", 0, 0, -5],
-        ["22/06", 0, 0, -5],
-        ["22/07", 0, 1, -4],
-        ["22/08", 0, 1, -3],
-        ["22/09", 3, 2, -4],
-        ["22/10", 0, 1, -3],
-        ["22/11", 2, 1, -4],
-        ["22/12", 4, 2, -6],
-        ["23/01", 0, 1, -5],
-        ["23/02", 0, 0, -5],
-        ["23/03", 1, 0, -6],
-        ["23/04", 1, 1, -6],
-        ["23/05", 1, 1, -6],
-        ["23/06", 0, 4, -2],
-        ["23/07", 0, 1, -1],
-        ["23/08", 1, 0, -2],
-        ["23/09", 3, 0, -5],
-        ["23/10", 12, 0, -17],
-        ["23/11", 15, 13, -19],
-        ["23/12", 1, 2, -18],
-        ["24/01", 5, 8, -15],
-        ["24/02", 5, 5, -15],
-        ["24/03", 7, 4, -18],
-        ["24/04", 3, 0, -21],
-        ["24/05", 2, 0, -23],
-        ["24/06", 0, 0, -23]
+        ["21/09", 0, 0, 0], ["21/10", 0, 0, 0], ["21/11", 2, 0, 2], ["21/12", 0, 1, -1], ["22/01", 3, 1, 2], ["22/02", 3, 3, 0], ["22/03", 1, 1, 0], ["22/04", 3, 1, 2], ["22/05", 0, 0, 0], ["22/06", 0, 0, 0], ["22/07", 0, 1, -1], ["22/08", 0, 1, -1], ["22/09", 3, 2, 1], ["22/10", 0, 1, -1], ["22/11", 2, 1, 1], ["22/12", 4, 2, 2], ["23/01", 0, 1, -1], ["23/02", 0, 0, 0], ["23/03", 1, 0, 1], ["23/04", 1, 1, 0], ["23/05", 1, 1, 0], ["23/06", 0, 4, -4], ["23/07", 0, 1, -1], ["23/08", 1, 0, 1], ["23/09", 3, 0, 3], ["23/10", 12, 0, 12], ["23/11", 15, 13, 2], ["23/12", 1, 2, -1], ["24/01", 5, 8, -3], ["24/02", 5, 5, 0], ["24/03", 7, 10, -3], ["24/04", 3, 2, 1], ["24/05", 1, 0, 1], ["24/06", 0, 0, 0], ["24/07", 0, 0, 0], ["24/08", 0, 0, 0]
       ]
     columns:
       - id: Month
@@ -295,7 +225,7 @@ pages:
           text-align: center
         html: >-
           <h1 style="font-size: xx-large; font-weight: bolder; font-family: 'Source Sans Pro';">OVHcloud Design System - Stats</h1>
-          <em>Last updated: 01/06/24</em>
+          <em>Last updated: 01/07/24</em>
       - type: TABS
         properties:
           width: 100%
@@ -326,7 +256,7 @@ pages:
                 general: 
                   title: Identified components
                 columns:
-                    - id: Identified components
+                    - id: Identified components (cumulated)
                       pattern: "#"
                 lookup:
                     uuid: component_count
@@ -336,7 +266,7 @@ pages:
                         column: Month
                     group:
                     - functions:
-                        - source: Identified components
+                        - source: Identified components (cumulated)
                         - source: Month
         - span: 4
           components:
@@ -345,14 +275,18 @@ pages:
                 general: 
                   title: Prodded components
                 columns:
-                    - id: Components created
+                    - id: Components created (cumulated)
                       pattern: "#"
                 lookup:
                     uuid: component_count
+                    rowCount: 1
+                    sort:
+                      - order: DESCENDING
+                        column: Month
                     group:
                     - functions:
-                        - source: Components created
-                          function: SUM
+                        - source: Components created (cumulated)
+                        - source: Month
         - span: 4
           components:
             - displayer:
@@ -360,14 +294,18 @@ pages:
                 general: 
                   title: Updated components
                 columns:
-                    - id: Components updated
+                    - id: Components updated (cumulated)
                       pattern: "#"
                 lookup:
                     uuid: component_count
+                    rowCount: 1
+                    sort:
+                      - order: DESCENDING
+                        column: Month
                     group:
                     - functions:
-                        - source: Components updated
-                          function: SUM
+                        - source: Components updated (cumulated)
+                        - source: Month
     - columns:
         - span: 6
           properties:
@@ -458,8 +396,8 @@ pages:
                         source: Month
                       functions:
                         - source: Month
-                        - source: Identified components
-                        - source: Sum of distinct components
+                        - source: Identified components (cumulated)
+                        - source: Components created (cumulated)
         - span: 6
           properties:
             font-size: xx-large
