--- a/static/ods.dash.yaml
+++ b/static/ods.dash.yaml
@@ -24,7 +24,8 @@ datasets:
   - uuid: component_count
     content: >-
       [
-        ["21/07", 26, 26, 0, 0, 0, 0, 0], ["21/08", 0, 26, 0, 0, 0, 0, 0], ["21/09", 5, 31, 0, 0, 0, 0, 0], ["21/10", 1, 32, 0, 0, 0, 0, 0], ["21/11", 1, 33, 11, 11, 0.33, 0, 0], ["21/12", 0, 33, 3, 14, 0.42, 0, 0], ["22/01", 0, 33, 0, 14, 0.42, 0, 0], ["22/02", 0, 33, 0, 14, 0.42, 0, 0], ["22/03", 1, 34, 0, 14, 0.41, 0, 0], ["22/04", 0, 34, 0, 14, 0.41, 1, 1], ["22/05", 2, 36, 0, 14, 0.39, 0, 1], ["22/06", 0, 36, 0, 14, 0.39, 0, 1], ["22/07", 5, 41, 9, 23, 0.56, 0, 1], ["22/08", 4, 45, 0, 23, 0.51, 1, 2], ["22/09", 2, 47, 3, 26, 0.55, 0, 2], ["22/10", 0, 47, 0, 26, 0.55, 0, 2], ["22/11", 0, 47, 0, 26, 0.55, 0, 2], ["22/12", 4, 51, 1, 27, 0.53, 0, 2], ["23/01", 1, 52, 0, 27, 0.52, 0, 2], ["23/02", 0, 52, 1, 28, 0.54, 0, 2], ["23/03", 0, 52, 0, 28, 0.54, 0, 2], ["23/04", 3, 55, 0, 28, 0.51, 1, 3], ["23/05", 0, 55, 1, 29, 0.53, 0, 3], ["23/06", 1, 56, 9, 38, 0.68, 1, 4], ["23/07", 0, 56, 4, 42, 0.75, 1, 5], ["23/08", 0, 56, 0, 42, 0.75, 0, 5], ["23/09", 0, 56, 5, 47, 0.84, 0, 5], ["23/10", 1, 57, 1, 48, 0.84, 0, 5], ["23/11", 1, 58, 2, 50, 0.86, 0, 5], ["23/12", 0, 58, 0, 50, 0.86, 0, 5], ["24/01", 3, 61, 0, 50, 0.82, 0, 5], ["24/02", 0, 61, 0, 50, 0.82, 0, 5], ["24/03", 1, 62, 1, 51, 0.82, 3, 8], ["24/04", 0, 62, 0, 51, 0.82, 10, 18], ["24/05", 1, 63, 0, 51, 0.81, 20, 38], ["24/06", 0, 63, 0, 51, 0.81, 7, 45], ["24/07", 0, 63, 0, 51, 0.81, 0, 45]
+        ["21/07", 26, 26, 0, 0, 0, 0, 0], ["21/08", 0, 26, 0, 0, 0, 0, 0], ["21/09", 5, 31, 0, 0, 0, 0, 0], ["21/10", 1, 32, 0, 0, 0, 0, 0], ["21/11", 1, 33, 11, 11, 0.33, 0, 0], ["21/12", 0, 33, 3, 14, 0.42, 0, 0], ["22/01", 0, 33, 0, 14, 0.42, 0, 0], ["22/02", 0, 33, 0, 14, 0.42, 0, 0], ["22/03", 1, 34, 0, 14, 0.41, 0, 0], ["22/04", 0, 34, 0, 14, 0.41, 1, 1], ["22/05", 2, 36, 0, 14, 0.39, 0, 1], ["22/06", 0, 36, 0, 14, 0.39, 0, 1], ["22/07", 5, 41, 9, 23, 0.56, 0, 1], ["22/08", 4, 45, 0, 23, 0.51, 1, 2], ["22/09", 2, 47, 3, 26, 0.55, 0, 2], ["22/10", 0, 47, 0, 26, 0.55, 0, 2], ["22/11", 0, 47, 0, 26, 0.55, 0, 2], ["22/12", 4, 51, 1, 27, 0.53, 0, 2], ["23/01", 1, 52, 0, 27, 0.52, 0, 2], ["23/02", 0, 52, 1, 28, 0.54, 0, 2], ["23/03", 0, 52, 0, 28, 0.54, 0, 2], ["23/04", 3, 55, 0, 28, 0.51, 1, 3], ["23/05", 0, 55, 1, 29, 0.53, 0, 3], ["23/06", 1, 56, 9, 38, 0.68, 1, 4], ["23/07", 0, 56, 4, 42, 0.75, 1, 5], ["23/08", 0, 56, 0, 42, 0.75, 0, 5], ["23/09", 0, 56, 5, 47, 0.84, 0, 5], ["23/10", 1, 57, 1, 48, 0.84, 0, 5], ["23/11", 1, 58, 2, 50, 0.86, 0, 5], ["23/12", 0, 58, 0, 50, 0.86, 0, 5], ["24/01", 3, 61, 0, 50, 0.82, 0, 5], ["24/02", 0, 61, 0, 50, 0.82, 0, 5], ["24/03", 1, 62, 1, 51, 0.82, 3, 8], ["24/04", 0, 62, 0, 51, 0.82, 10, 18], ["24/05", 1, 63, 0, 51, 0.81, 20, 38], ["24/06", 0, 63, 0, 51, 0.81, 7, 45], ["24/07", 0, 63, 0, 51, 0.81, 6, 51]
+
       ]
     columns:
       - id: Month
@@ -51,7 +52,8 @@ datasets:
         ["24/05", 61, 2203],
         ["24/06", 61, 1480],
         ["24/07", 60, 2038],
-        ["24/08", 24, 249],
+        ["24/08", 58, 912],
+        ["24/09", 46, 662],
       ]
     columns:
       - id: Month
@@ -88,7 +90,7 @@ datasets:
   - uuid: run_issues
     content: >-
       [
-        ["21/09", 0, 0, 0], ["21/10", 0, 0, 0], ["21/11", 2, 0, 2], ["21/12", 0, 1, -1], ["22/01", 3, 1, 2], ["22/02", 3, 3, 0], ["22/03", 1, 1, 0], ["22/04", 3, 1, 2], ["22/05", 0, 0, 0], ["22/06", 0, 0, 0], ["22/07", 0, 1, -1], ["22/08", 0, 1, -1], ["22/09", 3, 2, 1], ["22/10", 0, 1, -1], ["22/11", 2, 1, 1], ["22/12", 4, 2, 2], ["23/01", 0, 1, -1], ["23/02", 0, 0, 0], ["23/03", 1, 0, 1], ["23/04", 1, 1, 0], ["23/05", 1, 1, 0], ["23/06", 0, 4, -4], ["23/07", 0, 1, -1], ["23/08", 1, 0, 1], ["23/09", 3, 0, 3], ["23/10", 12, 0, 12], ["23/11", 15, 13, 2], ["23/12", 1, 2, -1], ["24/01", 5, 8, -3], ["24/02", 5, 5, 0], ["24/03", 7, 10, -3], ["24/04", 3, 2, 1], ["24/05", 1, 0, 1], ["24/06", 0, 0, 0], ["24/07", 0, 0, 0], ["24/08", 0, 0, 0]
+        ["21/09", 0, 0, 0], ["21/10", 0, 0, 0], ["21/11", 2, 0, -2], ["21/12", 0, 1, -1], ["22/01", 3, 1, -3], ["22/02", 3, 3, -3], ["22/03", 1, 1, -3], ["22/04", 3, 1, -5], ["22/05", 0, 0, -5], ["22/06", 0, 0, -5], ["22/07", 0, 1, -4], ["22/08", 0, 1, -3], ["22/09", 3, 2, -4], ["22/10", 0, 1, -3], ["22/11", 2, 1, -4], ["22/12", 4, 2, -6], ["23/01", 0, 1, -5], ["23/02", 0, 0, -5], ["23/03", 1, 0, -6], ["23/04", 1, 1, -6], ["23/05", 1, 1, -6], ["23/06", 0, 4, -2], ["23/07", 0, 1, -1], ["23/08", 1, 0, -2], ["23/09", 3, 0, -5], ["23/10", 12, 0, -17], ["23/11", 15, 13, -19], ["23/12", 1, 2, -18], ["24/01", 12, 10, -20], ["24/02", 2, 3, -19], ["24/03", 4, 10, -13], ["24/04", 2, 5, -10], ["24/05", 3, 0, -13], ["24/06", 2, 0, -15], ["24/07", 1, 0, -16], ["24/08", 0, 15, -1], ["24/09", 1, 0, -2]
       ]
     columns:
       - id: Month
@@ -109,8 +111,11 @@ datasets:
         ["24/02", 0, 0, 0, 9],
         ["24/03", 0, 7, 0, 16],
         ["24/04", 0, 1, 0, 17],
-        ["24/05", 0, 0, 1, 18],
-        ["24/06", 0, 1, 0, 19],
+        ["24/05", 1, 0, 1, 19],
+        ["24/06", 0, 1, 0, 20],
+        ["24/07", 0, 1, 0, 21],
+        ["24/08", 0, 0, 0, 21],
+        ["24/09", 0, 1, 0, 22],
       ]
     columns:
       - id: Month
@@ -126,8 +131,8 @@ datasets:
   - uuid: operational_prod_types
     content: >-
       [
-        ["Tech - For external UIs", 15],
-        ["Tech - For internal UIs", 2],
+        ["Tech - For external UIs", 19],
+        ["Tech - For internal UIs", 3],
         ["Design", 2]
       ]
     columns:
@@ -138,8 +143,8 @@ datasets:
   - uuid: operational_coverage
     content: >-
       [
-        ["Expected", 0.82],
-        ["Current", 0.63]
+        ["Expected", 0.83],
+        ["Current", 0.68]
       ]
     columns:
       - id: Name
@@ -165,7 +170,10 @@ datasets:
         ["24/03", 9, 8.7],
         ["24/04", 9, 8.7],
         ["24/05", 9, 8.7],
-        ["24/06", 9, 8.7]
+        ["24/06", 9, 8.7],
+        ["24/07", 9, 8.7],
+        ["24/08", 9, 8.7],
+        ["24/09", 9, 8.7]
       ]
     columns:
       - id: Month
@@ -193,7 +201,10 @@ datasets:
         ["24/03", 0],
         ["24/04", 0],
         ["24/05", 0],
-        ["24/06", 0]
+        ["24/06", 0],
+        ["24/07", 0],
+        ["24/08", 0],
+        ["24/09", 0]
       ]
     columns:
       - id: Month
@@ -205,7 +216,10 @@ datasets:
       [
         ["24/04", 0.15, 0.05],
         ["24/05", 0.15, 0.05],
-        ["24/06", 0.15, 0.05]
+        ["24/06", 0.15, 0.05],
+        ["24/07", 0.15, 0.05],
+        ["24/08", 0.15, 0.05],
+        ["24/09", 0.15, 0.05]
       ]
     columns:
       - id: Month
@@ -225,7 +239,7 @@ pages:
           text-align: center
         html: >-
           <h1 style="font-size: xx-large; font-weight: bolder; font-family: 'Source Sans Pro';">OVHcloud Design System - Stats</h1>
-          <em>Last updated: 01/07/24</em>
+          <em>Last updated: 15/09/24</em>
       - type: TABS
         properties:
           width: 100%
@@ -740,7 +754,7 @@ pages:
             components:
               - html: >-
                   <p style="font-family: 'Source Sans Pro'; font-weight: 600; color: #00185e">
-                    Incoming requests<hr />
+                    <small>(Archive)</small> Incoming requests<hr />
                   </p>
                 properties:
                   font-size: xx-large
